tests/invalid/unknown_symbol.ri
enum MyEnum {
    Musk
}

func main() {
    unknown_fn();
    x := UnknownStruct();
    z := unknown_var;
    _ = MyEnum::Mark;
}
